@@ -7,6 +7,8 @@ Changes in version 0.96
 - Fixed smtpfront-reject crashing on receipt of EHLO.
   Thanks Janos Farkas.
 
+- Fixed extern/static conflict in smtp-respond.c.  Thanks Gerrit Pape.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
